# zayden

./: .dockerignore  .env.example  .gitignore  .prettierrc  Cargo.toml  Dockerfile  TODO.md  clippy.toml  config.toml  docker-compose.yml  rustfmt.toml
bot/: Cargo.toml  config.toml.example
bot-modules/ai/: Cargo.toml
bot-modules/ai/src/: chat.rs  error.rs  lib.rs  openai.rs  output.rs
bot-modules/ai/tests/: openai.rs
bot-modules/destiny2/: Cargo.toml
bot-modules/destiny2/src/: compendium.rs  error.rs  lib.rs
bot-modules/destiny2/tests/: compendium_parse.rs  endgame_types.rs  loadout_domain.rs  loadout_refresh.rs
bot-modules/endgame-analysis/: Cargo.toml
bot-modules/endgame-analysis/src/: cron.rs  dimwishlist.rs  error.rs  lib.rs  tierlist.rs  weapon.rs
bot-modules/family/: Cargo.toml
bot-modules/family/src/: error.rs  family_manager.rs  lib.rs  manager.rs  relationships.rs
bot-modules/family/tests/: blocks.rs  invariants.rs  manager.rs
bot-modules/gambling/: Cargo.toml
bot-modules/gambling/src/: ctx_data.rs  error.rs  game_cache.rs  lib.rs  sqlx.rs  stamina.rs  utils.rs
bot-modules/gambling/tests/: effects.rs  lotto.rs
bot-modules/gold-star/: Cargo.toml
bot-modules/gold-star/src/: error.rs  lib.rs  manager.rs
bot-modules/levels/: Cargo.toml
bot-modules/levels/src/: error.rs  lib.rs  manager.rs  message_create.rs  sqlx_lib.rs
bot-modules/levels/tests/: logic.rs
bot-modules/lfg/: Cargo.toml
bot-modules/lfg/src/: activities.rs  error.rs  events.rs  guild_manager.rs  lib.rs  templates.rs  utils.rs
bot-modules/lfg/tests/: tags.rs
bot-modules/llamad2/: Cargo.toml
bot-modules/llamad2/src/: behind_the_scenes.rs  counting_fail.rs  dungeon_report.rs  error.rs  goodmorning.rs  goof.rs  hello.rs  lib.rs  playlist.rs  raidreport.rs  sensitivity.rs  socials.rs  status_update.rs
bot-modules/marathon/: Cargo.toml
bot-modules/marathon/src/: announce.rs  autocomplete.rs  cron.rs  embeds.rs  error.rs  gql.rs  lib.rs  merge.rs  model.rs  news.rs  schedule_rules.rs  source.rs
bot-modules/marathon/tests/: cron.rs  cyberacme.rs  embeds.rs  html.rs  live_maps.rs  marathonguide.rs  marathonmeta.rs  merge.rs  metaforge.rs  news.rs  parse.rs  tauceti.rs  weapon_stat.rs
bot-modules/music/: Cargo.toml
bot-modules/music/src/: embeds.rs  error.rs  events.rs  lib.rs  manager.rs  occupancy.rs  permissions.rs  player.rs  queue.rs  resolve.rs  settings.rs  track.rs  voice.rs
bot-modules/music/tests/: embeds.rs  occupancy.rs  permissions.rs  player.rs  queue.rs  resolve.rs  spotify.rs  youtube.rs
bot-modules/palworld/: Cargo.toml
bot-modules/palworld/src/: autocomplete.rs  breeding.rs  client.rs  cron.rs  difficulty.rs  embeds.rs  error.rs  lib.rs  link.rs  merge.rs  model.rs  source.rs  typechart.rs  upload.rs
bot-modules/palworld/tests/: breeding.rs  breeding_plan.rs  embeds.rs  guild.rs  live.rs  merge.rs  paldex.rs  palmap.rs  pelican.rs  save_decompress.rs  save_world.rs  upload.rs
bot-modules/suggestions/: Cargo.toml
bot-modules/suggestions/src/: components.rs  error.rs  guild_manager.rs  lib.rs  manager.rs  modal.rs  reaction.rs  slash_command.rs
bot-modules/suggestions/tests/: manager.rs  review_threshold.rs
bot-modules/temp-voice/: Cargo.toml
bot-modules/temp-voice/src/: error.rs  guild_manager.rs  lib.rs  voice_channel_manager.rs
bot-modules/temp-voice/tests/: components.rs  ownership.rs
bot-modules/ticket/: Cargo.toml
bot-modules/ticket/src/: components.rs  error.rs  lib.rs  message_command.rs  modal.rs  support_guild_manager.rs  ticket_manager.rs
bot-modules/zayden-core/: Cargo.toml
bot-modules/zayden-core/src/: cache.rs  cron.rs  ctx.rs  error.rs  events.rs  format_num.rs  lib.rs  modals.rs  module.rs  scope.rs  snowflake.rs  templates.rs
bot/sql/reaction_roles/: create.sql
bot/src/: cron.rs  ctx_data.rs  error.rs  main.rs  sqlx_lib.rs  state.rs  webhook_logger.rs
bot/src/bindings/: family.rs  gold_star.rs  mod.rs
bot/src/handler/: commands.rs  entitlement.rs  guild_create.rs  message_create.rs  mod.rs  presence_update.rs  reaction_add.rs  reaction_remove.rs  ready.rs  thread_delete.rs  voice_state_update.rs
bot/src/modules/: mod.rs
bot/src/registry/: dispatch_map.rs  mod.rs
dashboard/: Cargo.toml  tailwind.config.js
dashboard/src/: app.rs  dto.rs  error.rs  lib.rs  main.rs  state.rs  util.rs
dashboard/src/middleware/: auth.rs  guild_permission.rs  mod.rs  tier.rs
dashboard/src/server/: auth.rs  discord.rs  guild.rs  kofi.rs  mod.rs  modules.rs  tier.rs
dashboard/src/web/: mod.rs  routes_entitlement.rs  routes_guild.rs  routes_kofi.rs  routes_login.rs
dashboard/style/: input.css
dashboard/style/partials/: base.css  buttons.css  components.css  landing.css  layout.css  pages.css  responsive.css  tokens.css
destiny2/: Cargo.toml
destiny2/src/: compendium.rs  lib.rs
destiny2/src/loadouts/: arc_hunter.rs  arc_warlock.rs  boss_prismatic_hunter.rs  general_prismatic_hunter.rs  mod.rs  prismatic_hunter.rs  prismatic_titan.rs  prismatic_warlock.rs  solar_titan.rs  solar_warlock.rs  strand_titan.rs  strand_warlock.rs  void_warlock.rs  weapons.rs
destiny2/src/raid_guides/: desert_perpetual.rs  last_wish.rs  mod.rs  (+1 more)
endgame-analysis/: Cargo.toml
endgame-analysis/src/: dimwishlist.rs  error.rs  lib.rs  tierlist.rs  weapon.rs
gambling/: Cargo.toml
gambling/src/: error.rs  game_cache.rs  lib.rs  lotto.rs  shop.rs  utils.rs
levels/: Cargo.toml
levels/src/: lib.rs  sqlx_lib.rs
lfg/: Cargo.toml
lfg/src/: activities.rs  error.rs  events.rs  templates.rs  utils.rs
music/: Cargo.toml
music/src/: ctx_data.rs  lib.rs
suggestions/: Cargo.toml
suggestions/src/: components.rs  modal.rs  reaction.rs
web/: Cargo.toml
web-backend/: Cargo.toml
web-backend/src/: error.rs  main.rs
web/public/: index.html  settings.html  style.css
web/src/: main.rs
zayden-app/: Cargo.toml
zayden-app/src/: error.rs  lib.rs
zayden-app/tests/: config_settings.rs  entitlement.rs
zayden-core/: Cargo.toml
zayden-core/src/: application_command.rs  cache.rs  cron.rs  events.rs  lib.rs  modals.rs
(+1174 files in other folders)
