[workspace]
resolver = "3"
members = ["bot", "web-backend", "bot-modules/*"]

[workspace.dependencies]
ai = { path = "./bot-modules/ai" }
destiny2 = { path = "./bot-modules/destiny2" }
destiny2-core = { path = "./bot-modules/destiny2-core" }
endgame-analysis = { path = "./bot-modules/endgame-analysis" }
gambling = { path = "./bot-modules/gambling" }
levels = { path = "./bot-modules/levels" }
lfg = { path = "./bot-modules/lfg" }
llamad2 = { path = "./bot-modules/llamad2" }
reaction-roles = { path = "./bot-modules/reaction-roles" }
suggestions = { path = "./bot-modules/suggestions" }
temp-voice = { path = "./bot-modules/temp-voice" }
ticket = { path = "./bot-modules/ticket" }
verify = { path = "./bot-modules/verify" }
zayden-core = { path = "./bot-modules/zayden-core" }

bungie-api = { git = "https://github.com/ViridianLink/bungie-api.git", branch = "main" }

async-trait = { version = "*", default-features = false }
axum = { version = "*", default-features = false }
base64 = { version = "*", default-features = false }
bigdecimal = { version = "*", default-features = false }
charming = { version = "*", default-features = false }
dotenvy = { version = "*", default-features = false }
futures = { version = "*", default-features = false }
jiff = { version = "*" }
jiff-cron = { git = "https://github.com/jiff-cron/jiff-cron.git", branch = "main" }
jiff-sqlx = { version = "*" }
oauth2 = { version = "*", default-features = false }
rand = { version = "*", default-features = false }
rand_distr = { version = "*", default-features = false }
regex = { version = "*", default-features = false }
reqwest = { version = "*", default-features = false, features = ["rustls"] }
serde = { version = "*", default-features = false }
serde_json = { version = "*", default-features = false }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false, features = [
  "transport_compression_zlib",
  "transport_compression_zstd",
] }
sqlx = { version = "*", default-features = false }
tokio = { version = "*", default-features = false }
tower-cookies = { version = "*", default-features = false }
tower-http = { version = "*", default-features = false }
tracing = { version = "*", default-features = false }
tracing-subscriber = { version = "*", default-features = false }
twilight-http = { version = "*", default-features = false }
twilight-model = { version = "*", default-features = false }
url = { version = "*", default-features = false }

# [profile.release]
# opt-level = 3
# panic = "abort"
# strip = true
# codegen-units = 1
# lto = "fat"
