[workspace]
resolver = "3"
members = ["bot", "bot-modules/*", "dashboard", "zayden-app"]

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.96"

[workspace.lints.rust]
unsafe_code = "deny"

unused = { level = "warn", priority = -1 }
unused_imports = "deny"
unused_must_use = "deny"

unreachable_pub = "warn"
unused_qualifications = "warn"

# missing_debug_implementations = "warn"

rust_2018_idioms = { level = "deny", priority = -1 }

# Catch accidental lifetime elision weirdness
elided_lifetimes_in_paths = "deny"

# Common correctness footguns
noop_method_call = "deny"
redundant_lifetimes = "deny"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
variant_size_differences = "warn"

# Future compatibility
future_incompatible = { level = "deny", priority = -1 }

[workspace.lints.clippy]

# Correctness / panic prevention

unwrap_used = "deny"
expect_used = "deny"

panic = "deny"
panic_in_result_fn = "deny"
unreachable = "deny"

todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"

indexing_slicing = "warn"
string_slice = "warn"

unchecked_time_subtraction = "warn"

# Async correctness

await_holding_lock = "deny"
await_holding_refcell_ref = "deny"

unused_async = "warn"

# Performance

large_futures = "warn"
large_stack_arrays = "warn"

redundant_clone = "warn"
inefficient_to_string = "warn"

rc_buffer = "warn"
clone_on_ref_ptr = "warn"

# API quality

semicolon_if_nothing_returned = "warn"

must_use_candidate = "warn"
return_self_not_must_use = "warn"

missing_const_for_fn = "warn"

# Error handling

result_large_err = "warn"
map_err_ignore = "warn"
unwrap_in_result = "warn"
error_impl_error = "warn"

# Style / maintainability

wildcard_imports = "warn"
wildcard_enum_match_arm = "warn"

manual_assert = "warn"
manual_ok_or = "warn"

match_same_arms = "warn"

# Keeping attributes honest (excellent for AI agents)
allow_attributes_without_reason = "warn"
allow_attributes = "warn"

# Memory and Synchronization
mem_forget = "deny"
mutex_atomic = "warn"
rc_mutex = "warn"

# Pedantic + nursery

pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Noise reductions

module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

struct_excessive_bools = "allow"
too_many_lines = "allow"

similar_names = "allow"

# Often counterproductive in real systems
implicit_return = "allow"
single_call_fn = "allow"
single_match_else = "allow"

[workspace.dependencies]
ai = { path = "./bot-modules/ai" }
destiny2 = { path = "./bot-modules/destiny2" }
family = { path = "./bot-modules/family" }
gambling = { path = "./bot-modules/gambling" }
gold-star = { path = "./bot-modules/gold-star" }
levels = { path = "./bot-modules/levels" }
lfg = { path = "./bot-modules/lfg" }
llamad2 = { path = "./bot-modules/llamad2" }
marathon = { path = "./bot-modules/marathon" }
music = { path = "./bot-modules/music" }
palworld = { path = "./bot-modules/palworld" }
reaction-roles = { path = "./bot-modules/reaction-roles" }
suggestions = { path = "./bot-modules/suggestions" }
temp-voice = { path = "./bot-modules/temp-voice" }
ticket = { path = "./bot-modules/ticket" }
verify = { path = "./bot-modules/verify" }
zayden-core = { path = "./bot-modules/zayden-core" }
zayden-app = { path = "./zayden-app" }

bungie-api = { git = "https://github.com/ViridianLink/bungie-api.git", branch = "main" }

async-openai = { version = "*", default-features = false }
async-trait = { version = "*", default-features = false }
dashmap = { version = "*", default-features = false }
base64 = { version = "*", default-features = false }
bigdecimal = { version = "*", default-features = false }
charming = { version = "*", default-features = false }
dotenvy = { version = "*", default-features = false }
futures = { version = "*", default-features = false }
jiff = { version = "*", default-features = false }
jiff-cron = { version = "*", default-features = false }
jiff-sqlx = { version = "*", default-features = false }
moka = { version = "*", default-features = false }
rand = { version = "*", default-features = false }
rand_distr = { version = "*", default-features = false }
regex = { version = "*", default-features = false }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
rspotify = { version = "*", default-features = false }
rustls = { version = "*", default-features = false }
scraper = { version = "*", default-features = false }
serde = { version = "*", default-features = false }
serde_json = { version = "*", default-features = false }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false, features = [
  "rustls_backend",
  "transport_compression_zlib",
  "transport_compression_zstd",
] }
songbird = { git = "https://github.com/serenity-rs/songbird", branch = "serenity-next", default-features = false }
sqlx = { version = "*", default-features = false, features = [
  "macros",
  "postgres",
  "tls-rustls-aws-lc-rs",
  "runtime-tokio",
] }
thiserror = { version = "*", default-features = false }
tokio = { version = "*", default-features = false }
toml = { version = "*", default-features = false }
tracing = { version = "*", default-features = false }
tracing-subscriber = { version = "*", default-features = false }
url = { version = "*", default-features = false }

# [profile.release]
# opt-level = 3
# panic = "abort"
# strip = true
# codegen-units = 1
# lto = "fat"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
