[package]
name = "bot"
version = "0.9.0"
edition = "2024"

[dependencies]
ai = { workspace = true }
destiny2 = { workspace = true }
endgame-analysis = { workspace = true }
gambling = { workspace = true }
levels = { workspace = true }
lfg = { workspace = true }
llamad2 = { workspace = true }
music = { workspace = true }
reaction-roles = { workspace = true }
suggestions = { workspace = true }
temp-voice = { workspace = true }
ticket = { workspace = true }
verify = { workspace = true }
zayden-core = { workspace = true }

bungie-api = { workspace = true }

async-trait = { workspace = true }
bigdecimal = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true, features = ["async-await"] }
rand = { workspace = true, features = ["thread_rng"] }
reqwest = { workspace = true }
serde_json = { workspace = true }
serenity = { workspace = true, features = [
    "rustls_backend",
    "builder",
    "gateway",
    "transport_compression_zlib",
    "transport_compression_zstd",
] }
songbird = { workspace = true, features = ["gateway", "serenity"] }
sqlx = { workspace = true, features = [
    "macros",
    "bigdecimal",
    "chrono",
    "postgres",
    "runtime-tokio-rustls",
] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
