[package]
name = "bot"
version = "0.9.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
ai = { workspace = true }
destiny2 = { workspace = true }
family = { workspace = true }
destiny2-core = { workspace = true }
endgame-analysis = { workspace = true }
gambling = { workspace = true }
gold-star = { workspace = true }
levels = { workspace = true }
lfg = { workspace = true }
llamad2 = { workspace = true }
reaction-roles = { workspace = true }
suggestions = { workspace = true }
temp-voice = { workspace = true }
ticket = { workspace = true }
verify = { workspace = true }
zayden-core = { workspace = true }
zayden-app = { workspace = true }

bungie-api = { workspace = true }

async-trait = { workspace = true }
bigdecimal = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true, features = ["async-await"] }
jiff = { workspace = true }
jiff-sqlx = { workspace = true, features = ["postgres"] }
rand = { workspace = true, features = ["thread_rng"] }
serde_json = { workspace = true }
serenity = { workspace = true, features = [
  "rustls_backend",
  "builder",
  "gateway",
  "transport_compression_zlib",
  "transport_compression_zstd",
] }
sqlx = { workspace = true, features = [
  "macros",
  "bigdecimal",
  "postgres",
  "tls-rustls-aws-lc-rs",
  "runtime-tokio",
] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi", "fmt"] }
