[package]
name = "dashboard"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
axum = { version = "*", default-features = true, features = [
  "query",
  "tokio",
  "http2",
  "json",
  "macros",
] }
dashmap = { workspace = true }
dotenvy = { workspace = true }
oauth2 = { version = "*", default-features = false, features = ["reqwest"] }
leptos = { version = "*" }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
jiff = { workspace = true }
jiff-sqlx = { workspace = true }
moka = { workspace = true, features = ["future"] }
rand = { workspace = true, features = ["thread_rng"] }
sha2 = { version = "*", default-features = false }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls-aws-lc-rs",
  "macros",
] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tower-cookies = { version = "*", default-features = false, features = [
  "axum-core",
] }
tower-http = { version = "*", default-features = false, features = [
  "cors",
  "fs",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi", "fmt"] }
zayden-app = { workspace = true }
