[package]
name = "endgame-analysis"
version = "0.1.0"
edition = "2024"

[dependencies]
zayden-core = { workspace = true }

bungie-api = { git = "https://github.com/ViridianLink/bungie-api.git", branch = "main" }
google-sheets-api = { git = "https://github.com/ViridianLink/google-sheets-api.git", branch = "main" }

async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serenity = { workspace = true }
sqlx = { workspace = true }
