[package]
name = "gambling"
version = "0.1.0"
edition = "2024"

[dependencies]
zayden-core = { workspace = true }
levels = { workspace = true }

async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
serenity = { workspace = true, features = [
    "rustls_backend",
    "builder",
    "gateway",
    "collector",

] }
sqlx = { workspace = true, features = ["json"] }
tokio = { workspace = true }
