[package]
name = "lfg"
version = "0.9.0"
edition = "2024"

[dependencies]
zayden-core = { workspace = true }

async-trait = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
futures = { workspace = true }
serenity = { workspace = true, features = ["chrono"] }
sqlx = { workspace = true }
tokio = { workspace = true }
