[package]
name = "music"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
songbird = { workspace = true, features = [
    "driver",
    "gateway",
    "rustls",
    "serenity",
    "tungstenite",
] }
serenity = { workspace = true }
symphonia = { workspace = true, features = ["aac", "mkv"] }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
