[package]
name = "web"
version = "0.1.0"
edition = "2024"

# Dev Only
[lints.rust]
dead_code = "allow"
unused_imports = "allow"
unused_variables = "allow"


[dependencies]
axum = { workspace = true, features = [
  "query",
  "tokio",
  "http2",
  "json",
  "macros",
], default-features = true }
dotenvy = { workspace = true }
oauth2 = { workspace = true, features = ["reqwest"] }
reqwest = { version = "0.12" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls-aws-lc-rs",
] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tower-cookies = { workspace = true, features = ["axum-core"] }
tower-http = { workspace = true, features = ["cors", "fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi", "fmt"] }
twilight-http = { workspace = true, default-features = true }
twilight-model = { workspace = true }
zayden-app = { workspace = true }
