[package]
name = "zayden-app"
version = "0.1.0"
edition = "2024"

[dependencies]
jiff = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls-aws-lc-rs",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
toml = { workspace = true }
tracing = { workspace = true }
