[package]
name = "zayden-app"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
jiff = { workspace = true }
jiff-sqlx = { workspace = true, features = ["postgres"] }
moka = { workspace = true, features = ["future"] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
  "derive",
  "postgres",
  "runtime-tokio",
  "tls-rustls-aws-lc-rs",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
toml = { workspace = true }
tracing = { workspace = true }
