[package]
name = "zayden-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
jiff = { workspace = true }
jiff-sqlx = { workspace = true, features = ["postgres"] }
moka = { workspace = true, features = ["future"] }
reqwest = { workspace = true, features = ["rustls", "json"] }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = [
  "derive",
  "postgres",
  "runtime-tokio",
  "tls-rustls-aws-lc-rs",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
toml = { workspace = true, features = ["parse", "serde"] }
tracing = { workspace = true }
