[package]
name = "zayden-core"
version = "0.9.0"
edition = "2024"


[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
cron = { workspace = true }
serenity = { workspace = true, features = ["rustls_backend", "gateway"] }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
