[package]
name = "endgame-analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
bungie-api = { workspace = true }
destiny2 = { workspace = true }
destiny2-core = { workspace = true }
jiff-cron = { workspace = true }
sqlx = { workspace = true }
futures = { workspace = true }
google-sheets-api = { git = "https://github.com/ViridianLink/google-sheets-api.git", branch = "main" }
serde = { workspace = true }
serde_json = { workspace = true }
serenity = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zayden-core = { workspace = true }
