[package]
name = "family"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
zayden-core = { workspace = true }

sqlx = { workspace = true }
futures = { workspace = true }
charming = { workspace = true }
serenity = { workspace = true }
