[package]
name = "gold-star"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
zayden-core = { workspace = true }

async-trait = { workspace = true }
jiff = { workspace = true }
jiff-sqlx = { workspace = true }
serenity = { workspace = true }
sqlx = { workspace = true }
