[package]
name = "levels"
version = "1.0.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
zayden-core = { workspace = true }

async-trait = { workspace = true }
jiff = { workspace = true }
jiff-sqlx = { workspace = true }
futures = { workspace = true }
rand = { workspace = true, features = ["thread_rng"] }
serenity = { workspace = true, features = ["collector"] }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
