[package]
name = "levels"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
zayden-core = { workspace = true }

async-trait = { workspace = true }
jiff = { workspace = true }
jiff-sqlx = { workspace = true }
rand = { workspace = true, features = ["thread_rng"] }
serenity = { workspace = true, features = ["collector"] }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
