[package]
name = "llamad2"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
zayden-core = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serenity = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
