[package]
name = "llamad2"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
zayden-core = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serenity = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
